--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "github-profile-readme-generator",
-  "version": "1.0.0",
-  "description": "Local GitHub Profile README Generator",
+  "version": "0.1.0",
+  "description": "A local CLI tool to generate GitHub profile READMEs",
   "main": "index.js",
+  "type": "module",
+  "bin": {
+    "gh-readme-gen": "./index.js"
+  },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
-  "keywords": ["github", "profile", "readme", "generator"],
+  "keywords": ["github", "readme", "generator", "cli"],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
-    "inquirer": "^8.2.4",
-    "marked": "^4.0.0",
-    "fs-extra": "^10.0.0"
+    "chalk": "^5.3.0",
+    "commander": "^11.1.0",
+    "inquirer": "^9.2.12"
+  },
+  "devDependencies": {
+    "eslint": "^8.54.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.0"
   }
 }
