--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.0"
+  },
+  "jest": {
+    "transform": {},
+    "transformIgnorePatterns": [
+      "node_modules/(?!chalk)/"
+    ],
+    "testEnvironment": "node"
   }
 }
